--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\SimpleEnemyMovement.cs" />
+    <Compile Include="Assets\Scripts\SwordSlash.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
