--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -285,16 +285,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
-    <Compile Include="Assets\Scripts\EnemyBasic.cs" />
-    <Compile Include="Assets\Scripts\GopherEnemy.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemyBasic.cs" />
+    <Compile Include="Assets\Scripts\Enemies\GopherEnemy.cs" />
+    <Compile Include="Assets\Scripts\Enemies\SimpleEnemyMovement.cs" />
+    <Compile Include="Assets\Scripts\Managers\DialogueManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\Pickup.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\Portal.cs" />
     <Compile Include="Assets\Scripts\Projectile.cs" />
-    <Compile Include="Assets\Scripts\SimpleEnemyMovement.cs" />
     <Compile Include="Assets\Scripts\SwordSlash.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
