--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyBasic.cs" />
     <Compile Include="Assets\Scripts\Enemies\GopherEnemy.cs" />
+    <Compile Include="Assets\Scripts\Enemies\HunterEnemy.cs" />
     <Compile Include="Assets\Scripts\Enemies\SimpleEnemyMovement.cs" />
     <Compile Include="Assets\Scripts\Managers\DialogueManager.cs" />
     <Compile Include="Assets\Scripts\Managers\PlayerManager.cs" />
