Shooter Enemy, Grass Patches, Fixed Breakable Wall
Added a shooter enemy that runs from you and also shoots.

Grass patches have been added, and along with them, a % chance to drop money instead of a fixed amount.

Breakable walls have the right script attached now.

We're all set for level design!

--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -288,6 +288,7 @@
     <Compile Include="Assets\Scripts\Enemies\EnemyBasic.cs" />
     <Compile Include="Assets\Scripts\Enemies\GopherEnemy.cs" />
     <Compile Include="Assets\Scripts\Enemies\HunterEnemy.cs" />
+    <Compile Include="Assets\Scripts\Enemies\ShooterEnemy.cs" />
     <Compile Include="Assets\Scripts\Enemies\SimpleEnemyMovement.cs" />
     <Compile Include="Assets\Scripts\Managers\DialogueManager.cs" />
     <Compile Include="Assets\Scripts\Managers\PlayerManager.cs" />
