Shop It Up, Baby
Shops now available! Theoretically any item can be bought... even enemies.

--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -285,6 +285,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
+    <Compile Include="Assets\Scripts\Dialogue.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyBasic.cs" />
     <Compile Include="Assets\Scripts\Enemies\GopherEnemy.cs" />
     <Compile Include="Assets\Scripts\Enemies\HunterEnemy.cs" />
@@ -292,11 +293,13 @@
     <Compile Include="Assets\Scripts\Enemies\SimpleEnemyMovement.cs" />
     <Compile Include="Assets\Scripts\Managers\DialogueManager.cs" />
     <Compile Include="Assets\Scripts\Managers\PlayerManager.cs" />
+    <Compile Include="Assets\Scripts\NPC.cs" />
     <Compile Include="Assets\Scripts\Pickup.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\Portal.cs" />
     <Compile Include="Assets\Scripts\Projectile.cs" />
+    <Compile Include="Assets\Scripts\Shop.cs" />
     <Compile Include="Assets\Scripts\SwordSlash.cs" />
   </ItemGroup>
   <ItemGroup />
