--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -284,6 +284,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Artifact.cs" />
+    <Compile Include="Assets\ArtifactLinked.cs" />
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\Dialogue.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyBasic.cs" />
