--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -284,7 +284,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Artifact.cs" />
+    <Compile Include="Assets\Scripts\ArtifactLinked.cs" />
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
+    <Compile Include="Assets\Scripts\Dialogue.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyBasic.cs" />
     <Compile Include="Assets\Scripts\Enemies\GopherEnemy.cs" />
     <Compile Include="Assets\Scripts\Enemies\HunterEnemy.cs" />
@@ -292,6 +295,7 @@
     <Compile Include="Assets\Scripts\Enemies\SimpleEnemyMovement.cs" />
     <Compile Include="Assets\Scripts\Managers\DialogueManager.cs" />
     <Compile Include="Assets\Scripts\Managers\PlayerManager.cs" />
+    <Compile Include="Assets\Scripts\NPC.cs" />
     <Compile Include="Assets\Scripts\Pickup.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\PlayerStats.cs" />
@@ -299,7 +303,6 @@
     <Compile Include="Assets\Scripts\Projectile.cs" />
     <Compile Include="Assets\Scripts\SwordSlash.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
