--- a/ForwardToThePast.csproj
+++ b/ForwardToThePast.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\Dialogue.cs" />
     <Compile Include="Assets\Scripts\Enemies\EnemyBasic.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemySlash.cs" />
     <Compile Include="Assets\Scripts\Enemies\FinalBoss.cs" />
     <Compile Include="Assets\Scripts\Enemies\Golem.cs" />
     <Compile Include="Assets\Scripts\Enemies\GopherEnemy.cs" />
